[package]
name = "artichoke"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.75"
futures = "0.3.14"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.1", features = ["util", "tracing"] }
tower-http = { version = "0.5", features = ["fs"] }
hyper = { version = "1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.1", features = ["tokio", "client", "server"] }
http-body-util = "0.1"
tokio-native-tls = "0.3"
arti-client = { version = "0.38", features = ["onion-service-service", "onion-service-client"] }
tor-hsservice = "0.38"
tor-rtcompat = "0.38"
tor-proto = "0.38"
tor-cell = "0.38"
tor-error = "0.38"
safelog = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
axum = { version = "0.8.1", features = ["tracing"] }
notify = "8.2.0"
rand = "0.9.2"
rumqttc = "0.24.0"
uuid = { version = "1", features = ["v4"] }
comfy-table = "7.1"
indicatif = "0.17"
chrono = "0.4"
tokio-util = "0.7.10"
aes-gcm = "0.10"
hex = "0.4"
base64 = "0.22"